# dipLLoMacy_eval

./: .gitignore  MAP_VIEWER_TOPOLOGY_UPDATE.md  MERGE_SPLIT_IMPLEMENTATION.md  PHASED_MAP_GENERATION.md  README.md  REFACTORING_SUMMARY.md  TOPOLOGY_STRUCTURE.md  VIEWER_IMPLEMENTATION_SUMMARY.md  __init__.py  demo_merge_split.py  example_game.py  example_game_with_llm.py  example_turn_processing.py  example_usage.py  example_usage_phased.py  game_viewer.py  map_gen.py  map_viewer.py  map_viewer_cli.py  order_viewer.py  pyproject.toml  test_coastal_display.py  test_domain_warp.py  test_fractal_subdivision.py  test_phase2_extra_sea_merge.py  test_phase2_extra_sea_regions.py  test_phase2_merge_safety.py  test_phase2_merge_split.py  test_phase2_ocean_connectivity.py  test_phase5_topology_only.py  test_phase6_no_breakage.py  test_phase6_optimization.py  test_topology.py  test_topology_all_phases.py  test_topology_benefits.py  test_topology_integration.py  test_topology_properties.py  test_topology_utils.py  test_topology_visualization.py
.github/: copilot-instructions.md  copilot-setup-steps.yml
demo_map/: map_summary.txt
docs/: DESIGN_DECISIONS.md  DEVELOPMENT_PLAN.md  GAME_VIEWER_README.md  MAP_VIEWER_README.md  MERGE_SPLIT_IMPLEMENTATION.md  OUTPUT_STRUCTURE_CHANGES.md  PHASED_MAP_GENERATION.md  PLAN_GAME_ELEMENTS.md  PLAN_LLM_INTEGRATION.md  PLAN_MAP_COMPLETION.md  README.md  TOPOLOGY_MIGRATION_SUMMARY.md  TOPOLOGY_STRUCTURE.md
env-dipllm/: pyvenv.cfg
evaluation/: __init__.py  experiment.py  metrics.py  runner.py  scenarios.py
examples/: demo_merge_split.py  (+5 more)
(+82 files in other folders)
