[project]
name = "dipllomacy-eval"
version = "0.1.0"
description = "Framework for evaluating LLM strategic reasoning and negotiation via Diplomacy gameplay on randomized maps"
readme = "README.md"
license = "Unlicense"
requires-python = ">=3.12"
dependencies = [
    "numpy",
    "scipy",
    "shapely",
    "matplotlib",
]
